--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,8 @@ dependencies {
     // Retrofit dependencies
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation "io.insert-koin:koin-core:3.2.2"
+    implementation "io.insert-koin:koin-android:3.2.2"
+
 }
