--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ android {
 
 dependencies {
 
-    implementation "io.scanbot:sdk-package-1:1.97.0"
-    implementation "io.scanbot:sdk-package-ui:1.97.0"
+    implementation "io.scanbot:sdk-package-1:1.97.1"
+    implementation "io.scanbot:sdk-package-ui:1.97.1"
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
     implementation 'com.karumi:dexter:4.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -67,6 +67,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     implementation 'androidx.camera:camera-core:1.1.0'
+    implementation 'androidx.camera:camera-camera2:1.1.0@aar'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:18.0.0'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.2'
 
